--- a/pages/about.html
+++ b/pages/about.html
@@ -12,15 +12,15 @@
 <header>
 <a href="index.html">linux</a>
 <nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="portfolio.html">Portfolio</a></li>
-    <li><a href="pages/debian.html">Debian</a></li>
-    <li><a href="pages/about.html">About me</a></li>
-    <li><a href="pages/ubuntu.html">Ubuntu</a></li>
-    <li><a href="pages/contact,html">Contact</a></li>
-  </ul>
-</nav>
+    <ul>
+    <li><a href="../index.html">Home</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="pages/debian.html">Debian</a></li>
+      <li><a href="pages/about.html">About me</a></li>
+      <li><a href="pages/ubuntu.html">Ubuntu</a></li>
+      <li><a href="pages/contact,html">Contact</a></li>
+    </ul>
+  </nav>
 </header>
 <main>
 11111111111
