--- a/index.html
+++ b/index.html
@@ -1,32 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
-<link rel="stylesheet" href="css/reset-stylesheet.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <link rel="stylesheet" href="css/reset-stylesheet.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
+
 <body>
-<header>
-<a href="index.html">linux</a>
-<nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="portfolio.html">Portfolio</a></li>
-    <li><a href="pages/debian.html">Debian</a></li>
-    <li><a href="pages/about.html">About me</a></li>
-    <li><a href="pages/ubuntu.html">Ubuntu</a></li>
-    <li><a href="pages/contact,html">Contact</a></li>
-  </ul>
-</nav>
-</header>
-<main>
-11111111111
-</main>
-<footer>
-  2222222222
-</footer>
+
+  <header>
+    <a href="index.html" class="header-brand">linux</a>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="pages/portfolio.html">Portfolio</a></li>
+        <li><a href="pages/debian.html">Debian</a></li>
+        <li><a href="pages/about.html">About me</a></li>
+        <li><a href="pages/ubuntu.html">Ubuntu</a></li>
+        <li><a href="pages/contact.html">Contact</a></li>
+      </ul>
+      <a href="pages/cases.html " class="header-cases">Cases</a>
+    </nav>
+  </header>
+  <main>
+    <section class="index-banner">
+      <div class="vertical-center">
+        <h2>Create A Responsive Website Using HTML and CSS</h2>
+        <h1>We will make the website responsive on mobile and desktop</h1>
+        <h1><a href="#">GO</a></h1>
+      </div>
+    </section>
+    <section class="index-links">
+      <a href="">
+        <div class="index-boxlink-square">
+          <h3>Ubuntu</h3>
+        </div>
+      </a>
+      <a href="">
+        <div class="index-boxlink-rectangle">
+          <h3>Debian</h3>
+        </div>
+      </a>
+      <a href="">
+        <div class="index-boxlink-square">
+          <h3> CentOS</h3>
+        </div>
+      </a>
+      <a href="">
+        <div class="index-boxlink-rectangle">
+          <h3> Fedora</h3>
+        </div>
+      </a>
+      <a href="">
+        <div class="index-boxlink-square">
+          <h3> Red Hat</h3>
+        </div>
+      </a>
+      <a href="">
+        <div class="index-boxlink-square">
+          <h3> Kali</h3>
+        </div>
+      </a>
+    </section>
+  </main>
+
+
+  <footer>
+     <ul>
+       <li><a href="">Name</a></li>
+       <li><a href="">Name</a></li>
+       <li><a href="">Name</a></li>
+       <li><a href="">Name</a></li>
+       <li><a href="">Name</a></li>
+     </ul>
+
+     <ul>
+      <li>Name</li>
+      <li><a href="">Name</a></li>
+      <li><a href="">Name</a></li>
+      <li><a href="">Name</a></li>
+      <li><a href="">Name</a></li>
+    </ul>
+
+     <div class="footer-social-media">
+       <a href=""><img src="images/social-media/1.png" alt=""></a>
+       <a href=""><img src="images/social-media/2.png" alt=""></a>
+       <a href=""><img src="images/social-media/3.png" alt=""></a>
+       <a href=""><img src="images/social-media/4.png" alt=""></a>
+     </div>
+  </footer>
 </body>
+
 </html>
