--- a/pages/about.html
+++ b/pages/about.html
@@ -6,20 +6,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Me</title>
 </head>
 <body>
+  <h1>About me</h1>
 <header>
-<a href="index.html">linux</a>
+<a href="../index.html">linux</a>
 <nav>
     <ul>
     <li><a href="../index.html">Home</a></li>
       <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="pages/debian.html">Debian</a></li>
-      <li><a href="pages/about.html">About me</a></li>
-      <li><a href="pages/ubuntu.html">Ubuntu</a></li>
-      <li><a href="pages/contact,html">Contact</a></li>
+      <li><a href="debian.html">Debian</a></li>
+      <li><a href="about.html">About me</a></li>
+      <li><a href="ubuntu.html">Ubuntu</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
+    <a href="cases.html">Cases</a>
   </nav>
 </header>
 <main>
