--- a/pages/cases.html
+++ b/pages/cases.html
@@ -9,7 +9,7 @@
     <title>About Me</title>
 </head>
 <body>
-  <h1>Portfolio</h1>
+  <h1>Cases</h1>
 <header>
 <a href="../index.html">linux</a>
 <nav>
