--- a/index.html
+++ b/index.html
@@ -71,19 +71,23 @@
 
   <footer>
      <ul>
-       <li><a href="">Name</a></li>
-       <li><a href="">Name</a></li>
-       <li><a href="">Name</a></li>
-       <li><a href="">Name</a></li>
-       <li><a href="">Name</a></li>
+       <li class="footer-links-main">OpenStack</li>
+       <li><a href="">What is OpenStack</a></li>
+       <li><a href="">Features</a></li>
+       <li><a href="">Managed</a></li>
+       <li><a href="">Consulting</a></li>
+       <li><a href="">Compare</a></li>
+       <li><a href="">TCO calculator</a></li>
+       <li><a href="">Install</a></li>
+       <li><a href="">Docs</a></li>
      </ul>
 
-     <ul>
-      <li>Name</li>
-      <li><a href="">Name</a></li>
-      <li><a href="">Name</a></li>
-      <li><a href="">Name</a></li>
-      <li><a href="">Name</a></li>
+     <ul class="footer-links-cases">
+      <li>Multi-cloud applications – beyond PAAS</li>
+      <li><a href="">Operate smoothly across public and private cloud</a></li>
+      <li><a href="">Reusable integration code as open source packages</a></li>
+      <li><a href="">Python Operator Framework for rapid development</a></li>
+      <li><a href="">Bring the K8s operator pattern to classic workloads</a></li>
     </ul>
 
      <div class="footer-social-media">
