--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </nav>
   </header>
   <main>
+
     <section class="index-banner">
       <div class="vertical-center">
         <h2>Create A Responsive Website Using HTML and CSS</h2>
@@ -34,69 +35,78 @@
         <h1><a href="#">GO</a></h1>
       </div>
     </section>
-    <section class="index-links">
-      <a href="">
-        <div class="index-boxlink-square">
-          <h3>Ubuntu</h3>
-        </div>
-      </a>
-      <a href="">
-        <div class="index-boxlink-rectangle">
-          <h3>Debian</h3>
-        </div>
-      </a>
-      <a href="">
-        <div class="index-boxlink-square">
-          <h3> CentOS</h3>
-        </div>
-      </a>
-      <a href="">
-        <div class="index-boxlink-rectangle">
-          <h3> Fedora</h3>
-        </div>
-      </a>
-      <a href="">
-        <div class="index-boxlink-square">
-          <h3> Red Hat</h3>
-        </div>
-      </a>
-      <a href="">
-        <div class="index-boxlink-square">
-          <h3> Kali</h3>
-        </div>
-      </a>
-    </section>
+    <div class="wrapper">
+      <section class="index-links">
+        <a href="">
+          <div class="index-boxlink-square">
+            <h3>Ubuntu</h3>
+          </div>
+        </a>
+        <a href="">
+          <div class="index-boxlink-rectangle">
+            <h3>Debian</h3>
+          </div>
+        </a>
+        <a href="">
+          <div class="index-boxlink-square">
+            <h3> CentOS</h3>
+          </div>
+        </a>
+        <a href="">
+          <div class="index-boxlink-rectangle">
+            <h3> Fedora</h3>
+          </div>
+        </a>
+        <a href="">
+          <div class="index-boxlink-square">
+            <h3> Red Hat</h3>
+          </div>
+        </a>
+        <a href="">
+          <div class="index-boxlink-square">
+            <h3> Kali</h3>
+          </div>
+        </a>
+      </section>
+    </div>
   </main>
 
 
   <footer>
-     <ul>
-       <li class="footer-links-main">OpenStack</li>
-       <li><a href="">What is OpenStack</a></li>
-       <li><a href="">Features</a></li>
-       <li><a href="">Managed</a></li>
-       <li><a href="">Consulting</a></li>
-       <li><a href="">Compare</a></li>
-       <li><a href="">TCO calculator</a></li>
-       <li><a href="">Install</a></li>
-       <li><a href="">Docs</a></li>
-     </ul>
+    <div class="wrapper">
+      <ul class="footer-links-main">
+        <li>
+          <p>OpenStack</p>
+        </li>
+        <li><a href="">What is OpenStack</a></li>
+        <li><a href="">Features</a></li>
+        <li><a href="">Managed</a></li>
+        <li><a href="">Consulting</a></li>
+        <li><a href="">Compare</a></li>
+        <li><a href="">TCO calculator</a></li>
+        <li><a href="">Install</a></li>
+        <li><a href="">Docs</a></li>
+      </ul>
 
-     <ul class="footer-links-cases">
-      <li>Multi-cloud applications – beyond PAAS</li>
-      <li><a href="">Operate smoothly across public and private cloud</a></li>
-      <li><a href="">Reusable integration code as open source packages</a></li>
-      <li><a href="">Python Operator Framework for rapid development</a></li>
-      <li><a href="">Bring the K8s operator pattern to classic workloads</a></li>
-    </ul>
+      <ul class="footer-links-cases">
+        <li>
+          <p> Multi-cloud applications – beyond PAAS </p>
+        </li>
+        <li><a href="">Operate smoothly across public and private cloud</a></li>
+        <li><a href="">Reusable integration code as open source packages</a></li>
+        <li><a href="">Python Operator Framework for rapid development</a></li>
+        <li><a href="">Bring the K8s operator pattern to classic workloads</a></li>
+      </ul>
 
-     <div class="footer-social-media">
-       <a href=""><img src="images/social-media/1.png" alt=""></a>
-       <a href=""><img src="images/social-media/2.png" alt=""></a>
-       <a href=""><img src="images/social-media/3.png" alt=""></a>
-       <a href=""><img src="images/social-media/4.png" alt=""></a>
-     </div>
+      <div class="footer-social-media">
+        <a href=""><img src="images/social-media/1.png" alt=""></a>
+        <a href=""><img src="images/social-media/2.png" alt=""></a>
+        <a href=""><img src="images/social-media/3.png" alt=""></a>
+        <a href=""><img src="images/social-media/4.png" alt=""></a>
+      </div>
+    </div>
   </footer>
+
 </body>
 
 </html>
