--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h3>Ubuntu</h3>
           </div>
         </a>
-        <a href="">
+        <a href="pages/cases.html">
           <div class="index-boxlink-rectangle">
             <h3>Debian</h3>
           </div>
