--- a/pages/about.html
+++ b/pages/about.html
@@ -1,34 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
-<link rel="stylesheet" href="css/reset-stylesheet.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+  <link rel="stylesheet" href="css/reset-stylesheet.css">
+  <link rel="stylesheet" href="../css/test.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Me</title>
 </head>
+
 <body>
   <h1>About me</h1>
-<header>
-<a href="../index.html">linux</a>
-<nav>
-    <ul>
-    <li><a href="../index.html">Home</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="debian.html">Debian</a></li>
-      <li><a href="about.html">About me</a></li>
-      <li><a href="ubuntu.html">Ubuntu</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-    <a href="cases.html">Cases</a>
-  </nav>
-</header>
-<main>
-11111111111
-</main>
-<footer>
-  2222222222
-</footer>
+  <header>
+    <a href="../index.html">linux</a>
+    <nav>
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="debian.html">Debian</a></li>
+        <li><a href="about.html">About me</a></li>
+        <li><a href="ubuntu.html">Ubuntu</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <a href="cases.html">Cases</a>
+    </nav>
+  </header>
+  <main>
+
+    <section class="container">
+      <div class="item">
+        <h2>Title1</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus in at architecto, pariatur eius suscipit. Tenetur, consectetur repellat! Consequatur dolorum aperiam assumenda placeat commodi eius distinctio perspiciatis accusamus temporibus laboriosam.
+        </p>
+      </div>
+
+      <div class="item">
+        <h2>Title2</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsum accusantium ducimus velit. In quam maxime nisi veritatis nulla inventore, obcaecati aliquid dicta sunt eaque temporibus sapiente molestiae quaerat pariatur!
+        Eum facilis impedit odio ullam, eaque dolores vitae non nulla, quisquam commodi eius reprehenderit, facere odit. A in facere est, expedita accusantium distinctio sunt nulla aperiam aliquid illo nam? Suscipit!
+        Modi quibusdam inventore obcaecati voluptatem quasi maiores sint aspernatur, commodi eligendi debitis ea magni numquam cupiditate facilis perferendis hic laboriosam, dolor ab, deserunt accusantium quod? Fugiat autem maxime nisi soluta.
+        Optio officiis atque repellendus consequatur, at quae asperiores aliquid unde minima quis, ipsam soluta, quo quia nisi iure corrupti accusamus! Consequatur nam eligendi dolorum sequi dignissimos, ex possimus atque in.
+        </p>
+      </div>
+
+      <div class="item">
+        <h2>Title</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum perferendis modi a nostrum temporibus dolorem saepe voluptatum quaerat atque. Numquam ipsa voluptatum laboriosam labore, nemo consequatur autem praesentium dolores fugit!
+        </p>
+      </div>
+
+      <div class="item">
+        <h2>Title</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos harum magnam aperiam voluptatum atque adipisci vero molestias, perferendis a maiores necessitatibus ipsam porro perspiciatis. Reprehenderit minus et aliquid magnam ad?
+        </p>
+      </div>
+
+    </section>
+
+
+  </main>
+  <footer>
+    2222222222
+  </footer>
 </body>
+
 </html>
