--- a/pages/cases.html
+++ b/pages/cases.html
@@ -1,34 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
-<link rel="stylesheet" href="css/reset-stylesheet.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+  <link rel="stylesheet" href="../css/reset-stylesheet.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Debian</title>
 </head>
+
 <body>
-  <h1>Cases</h1>
-<header>
-<a href="../index.html">linux</a>
-<nav>
-    <ul>
-    <li><a href="../index.html">Home</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="debian.html">Debian</a></li>
-      <li><a href="about.html">About me</a></li>
-      <li><a href="ubuntu.html">Ubuntu</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-    <a href="cases.html">Cases</a>
-  </nav>
-</header>
-<main>
-11111111111
-</main>
-<footer>
-  2222222222
-</footer>
+
+  <header>
+    <a href="../index.html" class="header-brand">linux</a>
+    <nav>
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="debian.html">Debian</a></li>
+        <li><a href="about.html">About me</a></li>
+        <li><a href="ubuntu.html">Ubuntu</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <a href="cases.html " class="header-cases">Cases</a>
+    </nav>
+  </header>
+  <main>
+    <section class="debian-links">
+
+      <div class="wrapper">
+        <h2>Dbian</h2>
+
+        <a href="debian/download.html">
+          <div class="debian-link">
+            <p>Download <br> Debian 10 Buster </p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="debian-link">
+            <p>Initial Settings</p>
+          </div>
+        <a href="">
+          <div class="debian-link">
+            <p>NTP Server</p>
+          </div>
+        </a>
+        <a href="">
+          <div class="debian-link">
+            <p>SSH Server</p>
+          </div>
+        </a>
+        <a href="">
+          <div class="debian-link">
+            <p>DNS</p>
+          </div>
+        </a>
+        <a href="">
+          <div class="debian-link">
+            <p>DHCP</p>
+          </div>
+        </a>
+        <a href="">
+          <div class="debian-link">
+            <p>Storage Server </p>
+          </div>
+        </a>
+        <a href="">
+          <div class="debian-link">
+            <p>Virtualize</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="debian-link">
+            <p>Container</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="debian-link">
+            <p>Cloud Compute</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="debian-link">
+            <p>Directory Server</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="debian-link">
+            <p>WEB Server</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="debian-link">
+            <p>Database</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="debian-link">
+            <p>FTP</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="debian-link">
+            <p>Mail Server</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="debian-link">
+            <p>Samba Server</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="debian-link">
+            <p>Proxy</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="debian-link">
+            <p>Load Balance</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="debian-link">
+            <p>Monitoring</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="debian-link">
+            <p>Desktop Environment</p>
+          </div>
+      </div>
+    </section>
+
+  </main>
+
+  <div class="wrapper">
+    <footer>
+
+      <ul class="footer-links-main">
+        <li>
+          <p>OpenStack</p>
+        </li>
+        <li><a href="">What is OpenStack</a></li>
+        <li><a href="">Features</a></li>
+        <li><a href="">Managed</a></li>
+        <li><a href="">Consulting</a></li>
+        <li><a href="">Compare</a></li>
+        <li><a href="">TCO calculator</a></li>
+        <li><a href="">Install</a></li>
+        <li><a href="">Docs</a></li>
+      </ul>
+
+      <ul class="footer-links-cases">
+        <li>
+          <p> Multi-cloud applications – beyond PAAS </p>
+        </li>
+        <li><a href="">Operate smoothly across public and private cloud</a></li>
+        <li><a href="">Reusable integration code as open source packages</a></li>
+        <li><a href="">Python Operator Framework for rapid development</a></li>
+        <li><a href="">Bring the K8s operator pattern to classic workloads</a></li>
+      </ul>
+
+      <div class="footer-social-media">
+        <a href=""><img src="../images/social-media/1.png" alt=""></a>
+        <a href=""><img src="../images/social-media/2.png" alt=""></a>
+        <a href=""><img src="../images/social-media/3.png" alt=""></a>
+        <a href=""><img src="../images/social-media/4.png" alt=""></a>
+      </div>
+
+    </footer>
+  </div>
 </body>
+
 </html>
