--- a/index.html
+++ b/index.html
@@ -105,6 +105,15 @@
         <a href=""><img src="images/social-media/4.png" alt=""></a>
       </div>
     </div>
+
+    <p>
+      <a href="http://jigsaw.w3.org/css-validator/check/referer">
+          <img style="border:0;width:88px;height:31px"
+              src="http://jigsaw.w3.org/css-validator/images/vcss"
+              alt="Valid CSS!" />
+      </a>
+  </p>
+        
   </footer>
 
 </body>
