--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="DbOemlGvSEUbGgfm-L0nyJjPdW1gcEg_pguCLZ2UX3s" />
   <title>Document</title>
 </head>
 
