--- a/pages/ 404_page.html
+++ b/pages/ 404_page.html
@@ -13,20 +13,20 @@
 
 <body>
 
-  <header>
-    <a href="index.html" class="header-brand">linux</a>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="pages/portfolio.html">Portfolio</a></li>
-        <li><a href="pages/debian.html">Debian</a></li>
-        <li><a href="pages/about.html">About me</a></li>
-        <li><a href="pages/ubuntu.html">Ubuntu</a></li>
-        <li><a href="pages/contact.html">Contact</a></li>
-      </ul>
-      <a href="pages/cases.html " class="header-cases">Cases</a>
-    </nav>
-  </header>
+    <header>
+        <a href="../index.html" class="header-brand">linux</a>
+        <nav>
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="debian.html">Debian</a></li>
+            <li><a href="about.html">About me</a></li>
+            <li><a href="ubuntu.html">Ubuntu</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+          <a href="cases.html " class="header-cases">Cases</a>
+        </nav>
+      </header>
   <main>
 
     <section class="bsod container">
