--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
 
   <header>
-    <a href="index.html" class="header-brand">linux</a>
+    <a href="index" class="header-brand">linux</a>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index">Home</a></li>
         <li><a href="pages/portfolio.html">Portfolio</a></li>
         <li><a href="pages/debian.html">Debian</a></li>
         <li><a href="pages/about.html">About me</a></li>
