--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
       <ul>
         <li><a href="index">Home</a></li>
-        <li><a href="pages/portfolio.html">Portfolio</a></li>
+        <li><a href="pages/tutorial.html">Tutorial</a></li>
         <li><a href="pages/debian.html">Debian</a></li>
         <li><a href="pages/about.html">About me</a></li>
         <li><a href="pages/ubuntu.html">Ubuntu</a></li>
