--- a/pages/404.html
+++ b/pages/404.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <!-- https://www.digitalocean.com/community/tutorials/how-to-configure-apache-to-use-custom-error-pages-on-ubuntu-14-04 -->
 <head>
-
-  <link rel="stylesheet" href="../css/404.css">
   <link rel="stylesheet" href="../css/reset-stylesheet.css">
-  <link rel="stylesheet" href="css/404.css">
-  <link rel="stylesheet" href="css/reset-stylesheet.css">
+  <link rel="stylesheet" href="../css/404.css">
+  
+ 
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +19,7 @@
 <body>
 
     <header>
-        <a href="../index.html" class="header-brand">linux</a>
+        <a href="website/index.html" class="header-brand">linux</a>
         <nav>
           <ul>
             <li><a href="../index.html">Home</a></li>
