--- a/pages/tutorial.html
+++ b/pages/tutorial.html
@@ -6,16 +6,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>Tutorial</title>
 </head>
 <body>
-  <h1>Portfolio</h1>
+  <h1>Tutorial</h1>
 <header>
 <a href="../index.html">linux</a>
 <nav>
     <ul>
     <li><a href="../index.html">Home</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="tutorial.html">Tutorial</a></li>
       <li><a href="debian.html">Debian</a></li>
       <li><a href="about.html">About me</a></li>
       <li><a href="ubuntu.html">Ubuntu</a></li>
@@ -25,10 +25,10 @@
   </nav>
 </header>
 <main>
-11111111111
+<a href="T_css/variables_in.html">How to Create Variables in CSS | Create CSS Variables | Learn HTML & CSS | HTML Tutorial</a>
 </main>
 <footer>
-  2222222222
+  
 </footer>
 </body>
 </html>
