--- a/pages/T_css/variables_in.html
+++ b/pages/T_css/variables_in.html
@@ -4,7 +4,7 @@
 <head>
 
   
-  <link rel="stylesheet" href="../css/test.css">
+  <link rel="stylesheet" href="../../css/variables_in.css">
   <meta charset="utf-8">
   <meta name="description" content="This is a website that teaches html and css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +21,12 @@
   <p>This is a paragraph</p>
   <div class="textbox">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam perferendis mollitia reprehenderit temporibus labore inventore dolores aperiam quas delectus repellendus quod quisquam ullam repellat debitis necessitatibus, impedit porro nulla? Vel?</div>
 
+
+
+
+
 </div>
+
 
 <div class="section-two">
   <h2>This is a title</h2>
@@ -29,7 +34,6 @@
   <div class="textbox">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam perferendis mollitia reprehenderit temporibus labore inventore dolores aperiam quas delectus repellendus quod quisquam ullam repellat debitis necessitatibus, impedit porro nulla? Vel?</div>
 
 </div>
-
 </body>
 
 </html>
