--- a/pages/tutorial.html
+++ b/pages/tutorial.html
@@ -1,34 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
-<link rel="stylesheet" href="css/reset-stylesheet.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tutorial</title>
+  <link rel="stylesheet" href="../css/reset-stylesheet.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Debian</title>
 </head>
+
 <body>
-  <h1>Tutorial</h1>
-<header>
-<a href="../index.html">linux</a>
-<nav>
-    <ul>
-    <li><a href="../index.html">Home</a></li>
-      <li><a href="tutorial.html">Tutorial</a></li>
-      <li><a href="debian.html">Debian</a></li>
-      <li><a href="about.html">About me</a></li>
-      <li><a href="ubuntu.html">Ubuntu</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-    <a href="cases.html">Cases</a>
-  </nav>
-</header>
-<main>
-<a href="T_css/variables_in.html">How to Create Variables in CSS | Create CSS Variables | Learn HTML & CSS | HTML Tutorial</a>
-</main>
-<footer>
-  
-</footer>
+
+  <header>
+    <a href="../index.html" class="header-brand">linux</a>
+    <nav>
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="tutorial.html">Tutorial</a></li>
+        <li><a href="debian.html">Debian</a></li>
+        <li><a href="about.html">About me</a></li>
+        <li><a href="ubuntu.html">Ubuntu</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <a href="cases.html " class="header-cases">Cases</a>
+    </nav>
+  </header>
+
+
+  <main>
+    <div class="btn-group">
+      <button>
+     <a href="T_css/variables_in.html"> 1- How to Create Variables in CSS | Create CSS Variables | Learn HTML & CSS | HTML
+      Tutorial</a>
+    </button>
+   
+    <button>
+    <a href="T_css/Pseudo_Elements_and_Classes.html">2-  CSS Pseudo Elements and Classes | Style Part of an Element</a>
+  </button>
+  </div>
+  </main>
+
+    <footer>
+
+      <ul class="footer-links-main">
+        <li>
+          <p>OpenStack</p>
+        </li>
+        <li><a href="">What is OpenStack</a></li>
+        <li><a href="">Features</a></li>
+        <li><a href="">Managed</a></li>
+        <li><a href="">Consulting</a></li>
+        <li><a href="">Compare</a></li>
+        <li><a href="">TCO calculator</a></li>
+        <li><a href="">Install</a></li>
+        <li><a href="">Docs</a></li>
+      </ul>
+
+      <ul class="footer-links-cases">
+        <li>
+          <p> Multi-cloud applications – beyond PAAS </p>
+        </li>
+        <li><a href="">Operate smoothly across public and private cloud</a></li>
+        <li><a href="">Reusable integration code as open source packages</a></li>
+        <li><a href="">Python Operator Framework for rapid development</a></li>
+        <li><a href="">Bring the K8s operator pattern to classic workloads</a></li>
+      </ul>
+
+      <div class="footer-social-media">
+        <a href=""><img src="../images/social-media/1.png" alt=""></a>
+        <a href=""><img src="../images/social-media/2.png" alt=""></a>
+        <a href=""><img src="../images/social-media/3.png" alt=""></a>
+        <a href=""><img src="../images/social-media/4.png" alt=""></a>
+      </div>
+
+    </footer>
+ 
 </body>
+
 </html>
