--- a/pages/tutorial.html
+++ b/pages/tutorial.html
@@ -29,53 +29,61 @@
 
 
   <main>
-    <div class="btn-group">
+    <div class="btn-group grid">
       <button>
-     <a href="T_css/variables_in.html"> 1- How to Create Variables in CSS | Create CSS Variables | Learn HTML & CSS | HTML
-      Tutorial</a>
-    </button>
-   
-    <button>
-    <a href="T_css/Pseudo_Elements_and_Classes.html">2-  CSS Pseudo Elements and Classes | Style Part of an Element</a>
-  </button>
-  </div>
+        <a href="T_css/variables_in.html"> 1- How to Create Variables in CSS | Create CSS Variables | Learn HTML & CSS |
+          HTML
+          Tutorial</a>
+      </button>
+
+      <button>
+        <a href="T_css/Pseudo_Elements_and_Classes.html">2- CSS Pseudo Elements and Classes | Style Part of an
+          Element</a>
+      </button>
+      <button>
+        <a href="T_css/Transitions.html">3- Transitions</a>
+      </button>
+      <button>
+        <a href="T_css/Website_Layouts_Using_CSS_Grid_.html">4- Website Layouts Using CSS Grid </a>
+      </button>
+    </div>
   </main>
 
-    <footer>
+  <footer>
 
-      <ul class="footer-links-main">
-        <li>
-          <p>OpenStack</p>
-        </li>
-        <li><a href="">What is OpenStack</a></li>
-        <li><a href="">Features</a></li>
-        <li><a href="">Managed</a></li>
-        <li><a href="">Consulting</a></li>
-        <li><a href="">Compare</a></li>
-        <li><a href="">TCO calculator</a></li>
-        <li><a href="">Install</a></li>
-        <li><a href="">Docs</a></li>
-      </ul>
+    <ul class="footer-links-main">
+      <li>
+        <p>OpenStack</p>
+      </li>
+      <li><a href="">What is OpenStack</a></li>
+      <li><a href="">Features</a></li>
+      <li><a href="">Managed</a></li>
+      <li><a href="">Consulting</a></li>
+      <li><a href="">Compare</a></li>
+      <li><a href="">TCO calculator</a></li>
+      <li><a href="">Install</a></li>
+      <li><a href="">Docs</a></li>
+    </ul>
 
-      <ul class="footer-links-cases">
-        <li>
-          <p> Multi-cloud applications – beyond PAAS </p>
-        </li>
-        <li><a href="">Operate smoothly across public and private cloud</a></li>
-        <li><a href="">Reusable integration code as open source packages</a></li>
-        <li><a href="">Python Operator Framework for rapid development</a></li>
-        <li><a href="">Bring the K8s operator pattern to classic workloads</a></li>
-      </ul>
+    <ul class="footer-links-cases">
+      <li>
+        <p> Multi-cloud applications – beyond PAAS </p>
+      </li>
+      <li><a href="">Operate smoothly across public and private cloud</a></li>
+      <li><a href="">Reusable integration code as open source packages</a></li>
+      <li><a href="">Python Operator Framework for rapid development</a></li>
+      <li><a href="">Bring the K8s operator pattern to classic workloads</a></li>
+    </ul>
 
-      <div class="footer-social-media">
-        <a href=""><img src="../images/social-media/1.png" alt=""></a>
-        <a href=""><img src="../images/social-media/2.png" alt=""></a>
-        <a href=""><img src="../images/social-media/3.png" alt=""></a>
-        <a href=""><img src="../images/social-media/4.png" alt=""></a>
-      </div>
+    <div class="footer-social-media">
+      <a href=""><img src="../images/social-media/1.png" alt=""></a>
+      <a href=""><img src="../images/social-media/2.png" alt=""></a>
+      <a href=""><img src="../images/social-media/3.png" alt=""></a>
+      <a href=""><img src="../images/social-media/4.png" alt=""></a>
+    </div>
 
-    </footer>
- 
+  </footer>
+
 </body>
 
 </html>
