--- a/pages/tutorial.html
+++ b/pages/tutorial.html
@@ -29,23 +29,63 @@
 
 
   <main>
-    <div class="btn-group grid">
-      <button>
-        <a href="T_css/variables_in.html"> 1- How to Create Variables in CSS | Create CSS Variables | Learn HTML & CSS |
-          HTML
-          Tutorial</a>
-      </button>
+    <div class="grid-container">
+      <div class="item1 btn-group grid">
+        <button>
+          <a href="T_css/variables_in.html"> 1- How to Create Variables in CSS | Create CSS Variables | Learn HTML & CSS
+            |
+            HTML
+            Tutorial</a>
+        </button>
 
-      <button>
-        <a href="T_css/Pseudo_Elements_and_Classes.html">2- CSS Pseudo Elements and Classes | Style Part of an
-          Element</a>
-      </button>
-      <button>
-        <a href="T_css/Transitions.html">3- Transitions</a>
-      </button>
-      <button>
-        <a href="T_css/Website_Layouts_Using_CSS_Grid_.html">4- Website Layouts Using CSS Grid </a>
-      </button>
+        <button>
+          <a href="T_css/Pseudo_Elements_and_Classes.html">2- CSS Pseudo Elements and Classes | Style Part of an
+            Element</a>
+        </button>
+      </div>
+        <div class="item2 btn-group grid">
+        <button>
+          <a href="T_css/Transitions.html">3- Transitions</a>
+        </button>
+        <button>
+          <a href="T_css/Website_Layouts_Using_CSS_Grid_.html">4- Website Layouts Using CSS Grid </a>
+        </button>
+      
+      </div>
+
+      <div class="item3">
+
+        <h3>Menu</h3>
+
+        <div class=" btn-group-menu ">
+          <button>
+            <a href="T_css/Transitions.html"> Linux</a>
+          </button>
+          <button>
+            <a href="T_css/Website_Layouts_Using_CSS_Grid_.html">HTML </a>
+          </button>
+          <button>
+            <a href="T_css/Transitions.html"> CSS</a>
+          </button>
+          <button>
+            <a href="T_css/Website_Layouts_Using_CSS_Grid_.html">JavaScript </a>
+          </button>          <button>
+            <a href="T_css/Transitions.html"> SQL</a>
+          </button>
+          <button>
+            <a href="T_css/Website_Layouts_Using_CSS_Grid_.html">PHP </a>
+          </button>
+          <button>
+            <a href="T_css/Transitions.html"> Python</a>
+          </button>
+          <button>
+            <a href="T_css/Website_Layouts_Using_CSS_Grid_.html">bootstrap </a>
+          </button>
+        </div>
+
+
+       
+      </div>
     </div>
   </main>
 
