--- a/pages/T_css/Website_Layouts_Using_CSS_Grid_.html
+++ b/pages/T_css/Website_Layouts_Using_CSS_Grid_.html
@@ -26,6 +26,8 @@
         6- <em>"grid-auto-rows"</em> sets a size for the rows in a grid container.This property affects only rows with the size not set. <br>
         6- <em>"grid-auto-columns"</em> sets a size for the columns in a grid container.  <br>
         7- <em>"grid-auto-flow"</em> controls how auto-placed items get inserted in the grid. <br>
+        8- <em>" grid-row-start: 2;"</em> defines on which row-line the item will start. <br>
+        8- <em>" grid-row-end: span 3;"</em> defines on which row-line the item will start. <br>
     </div>
     </p> 
     <p>
@@ -45,11 +47,11 @@
     </div>
     
     <div class="grid">
-    <div>1</div>
-    <div>2</div>
-    <div>3</div>
-    <div>4</div>
-    <div>5</div>
+    <div class="item1">1</div>
+    <div class="item2">2</div>
+    <div class="item3">3</div>
+    <div class="item4">4</div>
+    <div class="item5">5</div>
 
 </div>
 </body>
