--- a/pages/tutorial.html
+++ b/pages/tutorial.html
@@ -27,9 +27,9 @@
     </nav>
   </header>
 
-
   <main>
     <div class="grid-container">
+
       <div class="item1 btn-group grid">
         <button>
           <a href="T_css/variables_in.html"> 1- How to Create Variables in CSS | Create CSS Variables | Learn HTML & CSS
@@ -41,6 +41,10 @@
         <button>
           <a href="T_css/Pseudo_Elements_and_Classes.html">2- CSS Pseudo Elements and Classes | Style Part of an
             Element</a>
+        </button>
+
+        <button>
+          <a href="T_css/Dropdown_Menu.html"> Dropdown Menu</a>
         </button>
       </div>
         <div class="item2 btn-group grid">
@@ -59,27 +63,27 @@
 
         <div class=" btn-group-menu ">
           <button>
-            <a href="T_css/Transitions.html"> Linux</a>
+            <a href="menu/Linux"> Linux</a>
           </button>
           <button>
-            <a href="T_css/Website_Layouts_Using_CSS_Grid_.html">HTML </a>
+            <a href="menu/HTML.html">HTML </a>
           </button>
           <button>
-            <a href="T_css/Transitions.html"> CSS</a>
+            <a href="menu/CSS.html"> CSS</a>
           </button>
           <button>
-            <a href="T_css/Website_Layouts_Using_CSS_Grid_.html">JavaScript </a>
+            <a href="menu/JavaScript.html">JavaScript </a>
           </button>          <button>
-            <a href="T_css/Transitions.html"> SQL</a>
+            <a href="menu/SQL.html"> SQL</a>
           </button>
           <button>
-            <a href="T_css/Website_Layouts_Using_CSS_Grid_.html">PHP </a>
+            <a href="menu/PHP.html">PHP </a>
           </button>
           <button>
-            <a href="T_css/Transitions.html"> Python</a>
+            <a href="menu/Python.html"> Python</a>
           </button>
           <button>
-            <a href="T_css/Website_Layouts_Using_CSS_Grid_.html">bootstrap </a>
+            <a href="menu/bootstrap.html">bootstrap </a>
           </button>
         </div>
 
@@ -88,6 +92,7 @@
       </div>
     </div>
   </main>
+ 
 
   <footer>
 
