--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
 
   <link rel="stylesheet" href="css/reset-stylesheet.css">
+  <link rel="shortcut icon" type="image/png" href="images/linux.png">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="DbOemlGvSEUbGgfm-L0nyJjPdW1gcEg_pguCLZ2UX3s" />
-  <title>Document</title>
+  <title>LINUX</title>
 </head>
 
 <body>
@@ -71,7 +72,9 @@
       </section>
     </div>
   </main>
-
+  <div id="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1018.117043081615!2d9.498534447998429!3d51.31586465089721!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bb38b4ee4e52d5%3A0x9c1a71b5e92d470e!2sK%C3%B6nigsplatz!5e1!3m2!1sar!2sde!4v1623974800896!5m2!1sar!2sde" width="" height="" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+  </div>
 
   <footer>
     <div class="wrapper">
